Fix hexdump misplaced in right-to-left languages

--- a/app/src/main/res/layout/payload_item.xml
+++ b/app/src/main/res/layout/payload_item.xml
@@ -48,6 +48,7 @@
         tools:textColor="@color/sentPayloadFg"
         android:textIsSelectable="true"
         android:fontFamily="monospace"
+        android:textDirection="ltr"
         android:textSize="9sp"
         android:textStyle="bold"
         android:scrollHorizontally="true"
