--- a/app/src/main/res/layout/payload_item.xml
+++ b/app/src/main/res/layout/payload_item.xml
@@ -40,20 +40,26 @@
             tools:text="application/javascript" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/dump"
+    <RelativeLayout
+        android:id="@+id/dump_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:background="@color/sentPayloadBg"
-        tools:textColor="@color/sentPayloadFg"
-        android:textIsSelectable="true"
-        android:fontFamily="monospace"
-        android:textDirection="ltr"
-        android:textSize="9sp"
-        android:textStyle="bold"
-        android:scrollHorizontally="true"
-        android:focusable="true"
-        tools:text="GET / HTTP/1.1\nHost: example.org\nAccept: */*"/>
+        tools:background="@color/sentPayloadBg">
+
+        <!-- Keep layout_width to "wrap_content" or text selection will fail in some cases (Android bug?) -->
+        <TextView
+            android:id="@+id/dump"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:textColor="@color/sentPayloadFg"
+            android:textIsSelectable="true"
+            android:fontFamily="monospace"
+            android:textDirection="ltr"
+            android:textSize="9sp"
+            android:textStyle="bold"
+            android:focusable="true"
+            tools:text="GET / HTTP/1.1\nHost: example.org\nAccept: */*"/>
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/expand_button"
