--- a/app/src/main/res/layout/payload_item.xml
+++ b/app/src/main/res/layout/payload_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:focusableInTouchMode="true"
+    android:nextFocusDown="@id/expand_button"
     android:paddingHorizontal="3sp">
 
     <LinearLayout
@@ -70,5 +72,5 @@
         android:layout_marginEnd="4dp"
         android:adjustViewBounds="true"
         android:src="@drawable/ic_expand_more"
-        android:tint="@color/colorTabText" />
+        app:tint="@color/colorTabText" />
 </LinearLayout>
