--- a/app/src/main/res/layout/payload_item.xml
+++ b/app/src/main/res/layout/payload_item.xml
@@ -39,8 +39,8 @@
             android:insetRight="0dp"
             android:minWidth="0dp"
             android:minHeight="0dp"
-            android:paddingVertical="0dp"
-            android:paddingHorizontal="0dp"
+            android:paddingVertical="2dp"
+            android:paddingHorizontal="2dp"
             android:layout_marginHorizontal="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,13 +73,23 @@
             tools:text="GET / HTTP/1.1\nHost: example.org\nAccept: */*"/>
     </RelativeLayout>
 
-    <ImageView
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/expand_button"
-        android:layout_width="30dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:insetLeft="0dp"
+        android:insetRight="0dp"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:paddingVertical="0dp"
+        android:paddingHorizontal="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
         android:layout_gravity="end"
-        android:layout_marginEnd="4dp"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_expand_more"
-        app:tint="@color/colorTabText" />
+        app:icon="@drawable/ic_expand_more"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:iconTint="@color/colorTabText"
+        style="@style/Widget.MaterialComponents.Button.TextButton" />
 </LinearLayout>
