Add ability to navigate to next/prev HTTP request

--- a/app/src/main/res/menu/connection_payload.xml
+++ b/app/src/main/res/menu/connection_payload.xml
@@ -5,7 +5,7 @@
     <item
         android:title="@string/display_as"
         android:icon="@drawable/ic_short_text"
-        app:showAsAction="ifRoom">
+        app:showAsAction="never">
         <menu>
             <group android:id="@+id/display_as_grp" android:checkableBehavior="single">
                 <item
